sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: not found: value getColeurr
      getColeurr(afterBlue) match {
      ^